# float_fast_print

./: .gitignore  CONTRIBUTORS  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  main.rs
tests/: benchmarks.rs  exhaustive.rs
